--- a/package.json
+++ b/package.json
@@ -24,12 +24,13 @@
     "compression": "^1.7.4",
     "copy-dir": "^1.2.0",
     "cross-env": "^6.0.3",
-    "node-sass": "^4.13.1",
     "layercake": "^2.0.1",
+    "node-sass": "^4.13.1",
     "polka": "next",
     "postcss": "^7.0.27",
     "prettier": "^1.19.1",
     "prettier-plugin-svelte": "^0.7.0",
+    "replace-in-file": "^5.0.2",
     "rollup": "^1.26.3",
     "rollup-plugin-hot": "^0.0.10",
     "rollup-plugin-livereload": "^1.0.0",
@@ -47,7 +48,7 @@
     "build": "rollup -c rollup.config-dev.js",
     "dev:rollup": "rollup -c rollup.config-dev.js -w",
     "dev": "npm run dev:rollup",
-    "deploy": "node copy.js && BASEPATH=covid sapper export --basepath covid",
+    "deploy": "node copy.js && sapper export && node relative.js",
     "pudding": "BASEPATH=2020/01/name sapper export --basepath 2020/01/name",
     "start": "sirv public"
   }
