--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "node": "12.6.1"
   },
   "dependencies": {
+    "cheerio": "^1.0.0-rc.3",
     "d3-array": "^2.4.0",
     "d3-collection": "^1.0.7",
     "d3-dsv": "^1.2.0",
@@ -12,6 +13,7 @@
     "d3-scale": "^3.2.1",
     "d3-shape": "^1.3.7",
     "d3-time-format": "^2.2.3",
+    "request": "^2.88.2",
     "tabler-icons": "^1.0.0"
   },
   "devDependencies": {
